# lium-cli

./: README.md  example_remote_execution.py  pyproject.toml
celium_cli/: cli.py
celium_cli/src/: cli_manager.py  config.py  utils.py
cli/: auth.py  cli.py  completion.py  config.py  lium_sdk.py  themed_console.py  themes.json  ui.py  utils.py
cli/actions/: __init__.py  rm.py  schedule.py
cli/bk/: __init__.py
cli/commands/: backup.py  config.py  exec.py  fund.py  image.py  init.py  ls.py  mine.py  ps.py  reboot.py  rm.py  rsync.py  schedule.py  scp.py  ssh.py  templates.py  theme.py  up.py  up_summary.py  update.py  volumes.py
cli/core/: __init__.py  context.py  helpers.py  options.py  pipeline.py  reporter.py  summary.py
cli/fund/: actions.py
cli/init/: actions.py
cli/ls/: actions.py  command.py
cli/ps/: actions.py  command.py  display.py
cli/reboot/: actions.py
cli/rm/: actions.py
cli/rsync/: actions.py
cli/scp/: actions.py  command.py
cli/ssh/: actions.py  command.py
cli/templates/: actions.py
cli/theme/: actions.py
cli/up/: actions.py  command.py
cli/update/: actions.py  command.py
docs/: api.rst  conf.py  getting-started.rst  index.rst  requirements.txt
docs/api/: lium.sdk.BackupConfig.rst  lium.sdk.BackupLog.rst  lium.sdk.Config.rst  lium.sdk.ExecutorInfo.rst  lium.sdk.Lium.rst  lium.sdk.PodInfo.rst  lium.sdk.Template.rst  lium.sdk.VolumeInfo.rst  lium.sdk.machine.rst
examples/: quick_vllm.py
lium/: __init__.py
lium/cli/: cli.py  plugin_example.py  (+1 more)
tests/: conftest.py  test_cli_main.py  test_config.py  test_utils.py
(+66 files in other folders)
