[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lium-cli"
version = "0.3.6"
description = "A custom CLI tool for Lium. Lium CLI provides tools for interacting with the Lium ecosystem from the command line."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Lium", email = "support@lium.ai"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent"
]
dependencies = [
    "click>=8.0.0",
    "rich>=14.1.0,<15.0",
    "PyYAML~=6.0.1",
    "requests>=2.25.0",
    "lium-sdk>=0.2.6",
]

[project.optional-dependencies]
dev = ["pytest", "black", "wheel"]

[project.scripts]
lium = "cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["cli"]

[tool.hatch.metadata]
allow-direct-references = true


[project.urls]
Homepage = "https://github.com/Datura-ai/lium-cli"
Repository = "https://github.com/Datura-ai/lium-cli"
Issues = "https://github.com/Datura-ai/lium-cli/issues"
